--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 					<header class="major">
 						<h2>Adrian Jewell, Software Engineer</h2>
 					</header>
-					<p>Thanks for visiting Adrian Jewell's personal website! Explore his <a
-							href="https://github.com/Adrianjewell91/"> github</a> and
-						check out
-						his piano albums on <a href="https://soundcloud.com/adrianjewell/sets"> soundcloud</a>.
+					<!-- <p>Thanks for visiting Adrian Jewell's personal website! </br> -->
+						<!-- WRITINGS: -->
+					</br> 
+					
 						<!-- <ol> -->
 						<li style="list-style: none"><a
 								href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">State
@@ -218,14 +218,14 @@
 		<div class="container">
 			<header class="major">
 				<h2>
-					Work Experience
+					Recent
 				</h2>
 			</header>
 			<p>.</p>
 			<div class="row gtr-150">
 				<div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/appacademy.jpg" alt="" /></span>
-					<h3>Technical Instructor</h3>
+					<h3>How Programmers Think</h3>
 					<p>As a full-time instructor, I've guided students
 						through
 						the final stages of App Academy's full-stack web-development curriculum.
@@ -263,8 +263,8 @@
 						(FirstNet Public
 						Safety Hackathon).
 					</p>
-				</div> -->
-	<!-- <div class="col-4 col-12-medium">
+				</div>
+	<div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/theorizer.png" alt="" /></span>
 					<h3>Theorizer</h3>
 					<p>Theorizer is an artificial intelligence that helps users memorize piano music.
@@ -273,16 +273,16 @@
 						<li><a href="https://github.com/adrianjewell91/theorizer" class="button">Github</a></li>
 						<li><a href="https://theorizer.herokuapp.com" class="button">Live</a></li>
 					</ul>
-				</div> -->
-	<!-- <div class="col-4 col-12-medium">
+				</div> 
+	<div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/pianocloud.png" alt="" /></span>
 					<h3>Pianist and Composer</h3>
 					<ul class="actions special">
 						<li><a href="https://www.soundcloud.com/adrianjewell" class="button">Live Recordings</a>
 						</li>
 					</ul>
-				</div> -->
-	<!-- <div class="col-4 col-12-medium">
+				</div>
+	<div class="col-4 col-12-medium">
 					<span class="image fit"><img src="images/translateoverflow.png" alt="" /></span>
 					<h3>Translate Overflow</h3>
 					<p>Thank you to Chris Guan and Porfirio Matias for building Translate Overflow with me. This application gets
@@ -343,10 +343,10 @@
 					<ul class="actions special">
 						<li><a href="https://github.com/adrianjewell91/PianoCloud" class="button">Github</a></li>
 					</ul>
-				</div> -->
+				</div>
 	</div>
 	</div>
-	</section>
+	</section>  -->
 
 	<!-- Four -->
 	<!-- <section id="four" class="main style2 special">
