--- a/assets/resume-music/index.html
+++ b/assets/resume-music/index.html
@@ -72,6 +72,30 @@
                     </div>
                     <div class="section__content">
                         <div class="experience" style="page-break-inside: avoid;">
+                            <div class="experience" style="page-break-inside: avoid;">
+                                <div class="experience__header">
+                                    <div class="experience__header-line">
+                                        <div class="experience__title">Software Engineer</div>
+                                        <div class="experience__date">2016 - Present, Boston/San Francisco</div>
+                                    </div>
+                                </div>
+                                <div class="experience__description">
+                                    <div>
+                                        <ul>
+                                            <li>Built SKU categorization and supply chain management software for enterprise-level
+                                                ecommerce firms. (current)
+                                            </li>
+                                            <li>
+                                                Built <a href="https://github.com/adrianjewell91/theorizer">Theorizer</a>, a
+                                                machine-learning proof of concept
+                                                 for piano music analysis.
+                                            </li>
+                                            <li>Implemented a computer from scratch <a
+                                                    href="https://github.com/Adrianjewell91/nand2tetris">(link)</a>.</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="experience__header">
                                 <div class="experience__header-line">
                                     <div class="experience__title">Writer</div>
@@ -85,7 +109,7 @@
                                             <a
                                                 href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">(link)</a>.
                                         </li>
-                                        <li>For the Lay Audience: How Programmers Think <a
+                                        <li>Three Part Lecture Series: How Programmers Think <a
                                                 href="https://github.com/Adrianjewell91/how-to-code">(link)</a>.</li>
                                     </ul>
                                 </div>
@@ -109,30 +133,6 @@
                                             of virtuoso classical piano works
                                             <a href="https://soundcloud.com/adrianjewell/sets/adrian-jewell-solo-piano">(link)</a>.
                                         </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="experience" style="page-break-inside: avoid;">
-                            <div class="experience__header">
-                                <div class="experience__header-line">
-                                    <div class="experience__title">Software Engineer</div>
-                                    <div class="experience__date">2016 - Present, Boston/San Francisco</div>
-                                </div>
-                            </div>
-                            <div class="experience__description">
-                                <div>
-                                    <ul>
-                                        <li>
-                                            Built <a href="https://github.com/adrianjewell91/theorizer">Theorizer</a>, a
-                                            machine learning web
-                                            application for piano music analysis.
-                                        </li>
-                                        <li>Wrote and delivered software for enterprise-level
-                                            ecommerce firms.
-                                        </li>
-                                        <li>Implemented a computer from scratch <a
-                                                href="https://github.com/Adrianjewell91/nand2tetris">(link)</a>.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -244,6 +244,10 @@
                                 href="http://www.soundcloud.com/adrianjewell">Listen
                                 on Soundcloud.</a>
                         </div>
+                                                <div class="socials">
+                                                    <div class="socials__label">Github</div>
+                                                    <a class="socials__link setting--primary-text" href="http://www.github.com/adrianjewell91">View Projects.</a>
+                                                </div>
                     </div>
                 </div>
                 <div class="section section--sidebar">
