--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<header class="major">
 						<h2>Adrian Jewell, Software Engineer</h2>
 					</header>
-					<!-- <p>Thanks for visiting Adrian Jewell's personal website! </br> -->
+					<p>Thanks for visiting my personal website!
 						<!-- WRITINGS: -->
 					</br> 
 					
