--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
 					</header>
 					<p>Thanks for visiting my personal website!
 						<!-- WRITINGS: -->
-					</br> 
-					
+						</br>
+
 						<!-- <ol> -->
+						<li style="list-style: none"><a
+								href="https://soundcloud.com/adrianjewell/sets/">Recordings</a></li><br>
 						<li style="list-style: none"><a
 								href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">State
 								Management: Observations on how music and coding are so similar.</a></li><br>
@@ -54,11 +56,11 @@
 								href="https://www.youtube.com/watch?v=6B85OM0PI_E&list=PL5SZIf1gi14Y8kwqfthd3pwfkwhbF58Ye">
 								How Computer Programmers Think. (Video Presentation) </a></li>
 
-							<!-- </ol> -->
-							<!-- Load Stripe.js on your website. -->
-							<!-- <script src="https://js.stripe.com/v3"></script> -->
-							<!-- Create a button that your customers click to complete their purchase. Customize the styling to suit your branding. -->
-							<!-- <button id="checkout-button-sku_G2wUA3hxOjHqhz" role="link">
+						<!-- </ol> -->
+						<!-- Load Stripe.js on your website. -->
+						<!-- <script src="https://js.stripe.com/v3"></script> -->
+						<!-- Create a button that your customers click to complete their purchase. Customize the styling to suit your branding. -->
+						<!-- <button id="checkout-button-sku_G2wUA3hxOjHqhz" role="link">
 							Checkout
 						</button>
 
