--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 						</br>
 
 						<!-- <ol> -->
-						<li style="list-style: none"><a
-								href="https://soundcloud.com/adrianjewell/sets/">Recordings</a></li><br>
+						<li style="list-style: none"><a href="https://soundcloud.com/adrianjewell/sets/">Recordings</a>
+						</li><br>
 						<li style="list-style: none"><a
 								href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">State
 								Management: Observations on how music and coding are so similar.</a></li><br>
@@ -54,7 +54,10 @@
 								How Computer Programmers Think. (Article)</a></li>
 						<li style="list-style: none"><a
 								href="https://www.youtube.com/watch?v=6B85OM0PI_E&list=PL5SZIf1gi14Y8kwqfthd3pwfkwhbF58Ye">
-								How Computer Programmers Think. (Video Presentation) </a></li>
+								How Computer Programmers Think. (Video Presentation) </a></li><br>
+						<li style="list-style: none"><a
+								href="https://duetduet.herokuapp.com">
+								Duet (Play Piano Duets Over the Internet) </a></li>
 
 						<!-- </ol> -->
 						<!-- Load Stripe.js on your website. -->
