--- a/assets/resume-music/index.html
+++ b/assets/resume-music/index.html
@@ -76,7 +76,7 @@
                                 <div class="experience__header">
                                     <div class="experience__header-line">
                                         <div class="experience__title">Software Engineer</div>
-                                        <div class="experience__date">2016 - Present, Boston/San Francisco</div>
+                                        <div class="experience__date">2016 - Present</div>
                                     </div>
                                 </div>
                                 <div class="experience__description">
@@ -86,9 +86,9 @@
                                                 ecommerce firms. (current)
                                             </li>
                                             <li>
-                                                Built <a href="https://github.com/adrianjewell91/theorizer">Theorizer</a>, a
-                                                machine-learning proof of concept
-                                                 for piano music analysis.
+                                                Built tools for music education: <a href="https://github.com/adrianjewell91/theorizer">Theorizer</a>
+                                                and <a href="https://github.com/adrianjewell91/duet-">Duet</a>
+                                                .
                                             </li>
                                             <li>Implemented a computer from scratch <a
                                                     href="https://github.com/Adrianjewell91/nand2tetris">(link)</a>.</li>
@@ -99,7 +99,7 @@
                             <div class="experience__header">
                                 <div class="experience__header-line">
                                     <div class="experience__title">Writer</div>
-                                    <div class="experience__date">2018 - Present, Boston, MA</div>
+                                    <div class="experience__date">2018 - Present</div>
                                 </div>
                             </div>
                             <div class="experience__description">
@@ -119,7 +119,7 @@
                             <div class="experience__header">
                                 <div class="experience__header-line">
                                     <div class="experience__title">Pianist & Composer</div>
-                                    <div class="experience__date">2010 - Present, Boston/San Francisco/湖南省长沙市</div>
+                                    <div class="experience__date">2010 - Present</div>
                                 </div>
                             </div>
                             <div class="experience__description">
@@ -141,7 +141,7 @@
                             <div class="experience__header">
                                 <div class="experience__header-line">
                                     <div class="experience__title">Educator</div>
-                                    <div class="experience__date">2007 - Present, United States of America and 中华人民共和国.
+                                    <div class="experience__date">2007 - Present
                                     </div>
                                 </div>
                             </div>
@@ -152,7 +152,7 @@
                                             Completed 1760 hours of AmeriCorps service at the MATCH Charter High School.
                                         </li>
                                         <li>
-                                            Completed a one-year residence in Hunan, China, educating over 420 Chinese
+                                            Completed a one-year residence in Hunan, China (湖南省长沙市南雅中学), educating over 420 Chinese
                                             Middle School students.
                                         </li>
                                     </ul>
