new resume and website

--- a/assets/resume-music/index.html
+++ b/assets/resume-music/index.html
@@ -76,13 +76,13 @@
                                 <div class="experience__header">
                                     <div class="experience__header-line">
                                         <div class="experience__title">Software Engineer</div>
-                                        <div class="experience__date">2016 - Present</div>
+                                        <div class="experience__date">2017 - Present</div>
                                     </div>
                                 </div>
                                 <div class="experience__description">
                                     <div>
                                         <ul>
-                                            <li>Built SKU categorization and supply chain management software for enterprise-level
+                                            <li>Built categorization and order management software for enterprise-level
                                                 ecommerce firms. (current)
                                             </li>
                                             <li>
