--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								href="https://www.youtube.com/watch?v=6B85OM0PI_E&list=PL5SZIf1gi14Y8kwqfthd3pwfkwhbF58Ye">
 								How Computer Programmers Think. (Video Presentation) </a></li><br>
 						<li style="list-style: none"><a
-								href="https://duetduet.herokuapp.com">
+								href="https://github.com/Adrianjewell91/duet-">
 								Duet (Play Piano Duets Over the Internet) </a></li>
 
 						<!-- </ol> -->
