--- a/assets/resume-music/index.html
+++ b/assets/resume-music/index.html
@@ -82,16 +82,18 @@
                                 <div class="experience__description">
                                     <div>
                                         <ul>
-                                            <li>Built categorization and order management software for enterprise-level
-                                                ecommerce firms. (current)
+                                            <li>Built categorization and order management software for high profile teams and projects at enterprise-level
+                                                ecommerce firms (current).
                                             </li>
                                             <li>
-                                                Built tools for music education: <a href="https://github.com/adrianjewell91/theorizer">Theorizer</a>
+                                                Built tools for music education: <a
+                                                    href="https://github.com/adrianjewell91/theorizer">Theorizer</a>
                                                 and <a href="https://github.com/adrianjewell91/duet-">Duet</a>
                                                 .
                                             </li>
                                             <li>Implemented a computer from scratch <a
-                                                    href="https://github.com/Adrianjewell91/nand2tetris">(link)</a>.</li>
+                                                    href="https://github.com/Adrianjewell91/nand2tetris">(link)</a>.
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
@@ -118,28 +120,6 @@
                         <div class="experience" style="page-break-inside: avoid;">
                             <div class="experience__header">
                                 <div class="experience__header-line">
-                                    <div class="experience__title">Pianist & Composer</div>
-                                    <div class="experience__date">2010 - Present</div>
-                                </div>
-                            </div>
-                            <div class="experience__description">
-                                <div>
-                                    <ul>
-                                        <li>Recorded an album of
-                                        original solo piano compositions
-                                        <a href="https://soundcloud.com/adrianjewell/sets/solo-album-1">(link)</a>.
-                                    </li>                                  
-                                        <li>Recorded a collection
-                                            of virtuoso classical piano works
-                                            <a href="https://soundcloud.com/adrianjewell/sets/adrian-jewell-solo-piano">(link)</a>.
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="experience" style="page-break-inside: avoid;">
-                            <div class="experience__header">
-                                <div class="experience__header-line">
                                     <div class="experience__title">Educator</div>
                                     <div class="experience__date">2007 - Present
                                     </div>
@@ -149,16 +129,42 @@
                                 <div>
                                     <ul>
                                         <li>
+                                            Taught full-stack development and interviewing skills at App Academy in both NYC and San Francisco, ensuring both branches met their placement goals. 
+                                        </li>
+                                        <li>
                                             Completed 1760 hours of AmeriCorps service at the MATCH Charter High School.
                                         </li>
                                         <li>
-                                            Completed a one-year residence in Hunan, China (湖南省长沙市南雅中学), educating over 420 Chinese
+                                            Completed a one-year residence in Hunan, China (湖南省长沙市南雅中学), educating over
+                                            420 Chinese
                                             Middle School students.
                                         </li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
+                                                <div class="experience" style="page-break-inside: avoid;">
+                                                    <div class="experience__header">
+                                                        <div class="experience__header-line">
+                                                            <div class="experience__title">Pianist & Composer</div>
+                                                            <div class="experience__date">2010 - Present</div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="experience__description">
+                                                        <div>
+                                                            <ul>
+                                                                <li>Recorded an album of
+                                                                    original solo piano compositions
+                                                                    <a href="https://soundcloud.com/adrianjewell/sets/solo-album-1">(link)</a>.
+                                                                </li>
+                                                                <li>Recorded a collection
+                                                                    of virtuoso classical piano works
+                                                                    <a href="https://soundcloud.com/adrianjewell/sets/adrian-jewell-solo-piano">(link)</a>.
+                                                                </li>
+                                                            </ul>
+                                                        </div>
+                                                    </div>
+                                                </div>
                     </div>
                 </div>
                 <div class="section" style="margin-top: 2em;">
@@ -244,10 +250,11 @@
                                 href="http://www.soundcloud.com/adrianjewell">Listen
                                 on Soundcloud.</a>
                         </div>
-                                                <div class="socials">
-                                                    <div class="socials__label">Github</div>
-                                                    <a class="socials__link setting--primary-text" href="http://www.github.com/adrianjewell91">View Projects.</a>
-                                                </div>
+                        <div class="socials">
+                            <div class="socials__label">Github</div>
+                            <a class="socials__link setting--primary-text"
+                                href="http://www.github.com/adrianjewell91">View Projects.</a>
+                        </div>
                     </div>
                 </div>
                 <div class="section section--sidebar">
