--- a/assets/resume/index.html
+++ b/assets/resume/index.html
@@ -29,7 +29,7 @@
             <div class="container__main">
                 <div class="top-block" style="margin-bottom: 3.6rem;">
                     <div class="top-block__details">
-                        <div class="top-block__name setting--primary-text">Adrian Jewell, Software Engineer</div>
+                        <div class="top-block__name setting--primary-text">Adrian Jewell (爱德华)</div>
                         <div class="top-block__contacts">
                             <span class="top-block__city">
                                 <span>B</span>
@@ -54,21 +54,6 @@
                                 <span>T</span>
                                 <span>S</span>
                             </span>
-                            <span class="top-block__contacts-sep">&middot;</span>
-                            <span class="top-block__phone">
-                                <span>6</span>
-                                <span>0</span>
-                                <span>7</span>
-                                <span>-</span>
-                                <span>2</span>
-                                <span>2</span>
-                                <span>1</span>
-                                <span>-</span>
-                                <span>6</span>
-                                <span>2</span>
-                                <span>6</span>
-                                <span>6</span>
-                            </span>
                         </div>
                     </div>
                 </div>
@@ -89,78 +74,106 @@
                         <div class="experience" style="page-break-inside: avoid;">
                             <div class="experience__header">
                                 <div class="experience__header-line">
-                                    <div class="experience__title">Instructor, App Academy</div>
-                                    <div class="experience__date">January – August 2019, San Francisco, CA</div>
+                                    <div class="experience__title">Educator</div>
+                                    <div class="experience__date">2007 - Present
+                                    </div>
                                 </div>
                             </div>
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>Published and received 42K+ views of a 1600-word article about coding and
-                                            music, resulting in the satisfaction of having communicated one's ideas
-                                            publically.
+                                        <li>
+                                            Taught full stack software development and algorithms at App Academy, and placed over 100 students with the placements team. 
+                                        </li>
+                                        <li>
+                                            Completed 1760 hours of AmeriCorps service at the MATCH Charter High School,
+                                            receiving highest evaluation for professsionalism and teaching quality.
+                                        </li>
+                                        <li>
+                                            Completed a one-year residence in Hunan, China (湖南省长沙市南雅中学), educating over
+                                            420 Chinese
+                                            Middle School students.
+                                        </li>
+                                        <li>
+                                            Taught music and mentored young men as a camp counselor at Blue Lake Fine
+                                            Arts Summer Camp, receiving accolades and a personal thank you from the camp
+                                            director.
+                                        </li>
+                                        <li> Taught piano casually over several years, including at the 罗马 piano school in
+                                            NYC.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="experience" style="page-break-inside: avoid;">
+                            <div class="experience__header">
+                                <div class="experience__header-line">
+                                    <div class="experience__title">Pianist & Composer</div>
+                                    <div class="experience__date">2010 - Present</div>
+                                </div>
+                            </div>
+                            <div class="experience__description">
+                                <div>
+                                    <ul>
+                                        <li>Recorded an album of
+                                            original solo piano compositions with over 550 listens
+                                            <a href="https://soundcloud.com/adrianjewell/sets/solo-album-1">(link)</a>.
+                                        </li>
+                                        <li>Recorded a collection
+                                            of virtuoso classical piano works with over 3000 listens
                                             <a
-                                                href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">(link)</a>
+                                                href="https://soundcloud.com/adrianjewell/sets/adrian-jewell-solo-piano">(link)</a>.
+                                        </li>
+                                        <li>
+                                            Accompanied numerous musicals, a circus, and solo performers, both on stage
+                                            and
+                                            in the studio, and recieved an offer to tour China nationally.
                                         </li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
-                        <div class="experience" style="page-break-inside: avoid;">
-                            <div class="experience__header">
-                                <div class="experience__header-line">
-                                    <div class="experience__title">Developer, Theorizer</div>
-                                    <div class="experience__date">November – December 2018, San Francisco, CA</div>
-                                </div>
+                        <div class="experience__header">
+                            <div class="experience__header-line">
+                                <div class="experience__title">Writer</div>
+                                <div class="experience__date">2018 - Present</div>
                             </div>
-                            <div class="experience__description">
-                                <div>
-                                    <ul>
-                                        <li>Documented <a
-                                                href="https://github.com/adrianjewell91/theorizer">Theorizer</a>,
-                                            an artificial intelligence for piano music analysis with potential to
-                                            generate $3000 a month in revenue, resulting in being accepted into the
-                                            Oberlin LaunchU Accelerator Bootcamp.</li>
-                                    </ul>
-                                </div>
+                        </div>
+                        <div class="experience__description">
+                            <div>
+                                <ul>
+                                    <li>State Management: Observations on How Music and Coding are So Similar
+                                        <a
+                                            href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">(link)</a>
+                                        (gained 42k reads).
+                                    </li>
+                                    <li>Three Part Lecture Series: How Programmers Think <a
+                                            href="https://github.com/Adrianjewell91/how-to-code">(link)</a>.</li>
+                                </ul>
                             </div>
                         </div>
                         <div class="experience" style="page-break-inside: avoid;">
-                            <div class="experience__header">
-                                <div class="experience__header-line">
-                                    <div class="experience__title">Software Engineer, Williams-Sonoma (through New
-                                        Elevation)</div>
-                                    <div class="experience__date">March – October 2018, San Francisco, CA</div>
+                            <div class="experience" style="page-break-inside: avoid;">
+                                <div class="experience__header">
+                                    <div class="experience__header-line">
+                                        <div class="experience__title">Software Engineer</div>
+                                        <div class="experience__date">2017 - Present</div>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="experience__description">
-                                <div>
-                                    <ul>
-                                        <!-- <li>Delivered millions of dollars of savings to the company by
-                                            streamlining inventory management processes.</li> -->
-                                        <!-- <li>Built features currently in use at over 1000 stores around the country by
-                                            pushing robust Javascript, HTML5, CSS3, and Java code to production for an
-                                            OMS with
-                                            30,000+ daily users.</li>
-                                        <li>Accommodated a lean team by fulfilling multiple roles beyond official job
-                                            duties: built UI
-                                            wireframes(2), wrote
-                                            JIRA
-                                            tickets
-                                            (30+), demoed to leadership (3x), negotiated API contracts (4).</li>
-                                        <li>Closed a performance gap by preventing 30,000 late-order fulfillments
-                                            during
-                                            peak season with a new feature.</li> -->
-                                        <li>Gave direct mentorship in frontend development for
-                                            1.5 months, resulting in an intern completing a
-                                            successful demo to executive leadership
-                                            .</li>
-                                        <li>Hit the ground running in the position,
-                                            resulting in successful projects and
-                                            over 4000 words of previously unwritten documentation to
-                                            assist
-                                            future developers.</li>
-                                    </ul>
+                                <div class="experience__description">
+                                    <div>
+                                        <ul>
+                                            <li>
+                                                Built tools for music education: <a
+                                                    href="https://github.com/adrianjewell91/theorizer">Theorizer</a>
+                                                and <a href="https://github.com/adrianjewell91/duet-">Duet</a>
+
+                                                . </li>
+                                            <li>Built database management software for high profile teams at ecommerce
+                                                firms (current).
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -189,7 +202,7 @@
                             </div>
                             <div class="experience__description">
                                 <ul>
-                                    <li>Won cash prizes for presenting full-stack solutions for
+                                    <li>Won cash prizes, presented full-stack solutions for
                                         homelessness,
                                         active-shooter
                                         emergencies,
@@ -238,32 +251,21 @@
                         <span>S</span>
                     </div>
                     <div class="section__content">
-                        <div class="details__section">
-                            <div class="details__general-detail">607-221-6266</div>
-                            <div class="details__general-detail">adrianjewell1@gmail.com</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="section section--sidebar">
-                    <div class="section__header">
-                        <span>L</span>
-                        <span>I</span>
-                        <span>N</span>
-                        <span>K</span>
-                        <span>S</span>
-                    </div>
-                    <div class="section__content">
                         <div class="socials">
                             <div class="socials__label">Portfolio</div>
                             <a class="socials__link setting--primary-text"
                                 href="http://www.adrianjewell.com">www.adrianjewell.com</a>
                         </div>
                         <div class="socials">
-                            <div class="socials__label">Solo Piano Album (Live)</div>
+                            <div class="socials__label">Music Albums</div>
                             <a class="socials__link setting--primary-text"
                                 href="http://www.soundcloud.com/adrianjewell">Listen
                                 on Soundcloud.</a>
-                            <div class="socials__label">(Gave 100+ Recitals)</div>
+                        </div>
+                        <div class="socials">
+                            <div class="socials__label">Github</div>
+                            <a class="socials__link setting--primary-text"
+                                href="http://www.github.com/adrianjewell91">View Projects.</a>
                         </div>
                     </div>
                 </div>
@@ -283,7 +285,6 @@
                         <div class="skill">
                             <div class="skill__name">Mandarin Chinese:</div>
                             <div class="skill__name">看，写，说</div>
-                            <div class="skill__name">(1-Year Residence in Hunan, Changsha)</div>
                         </div>
                     </div>
                 </div>
@@ -298,51 +299,35 @@
                     </div>
                     <div class="section__content">
                         <div class="skill">
+                            <div class="skill__name">Education</div>
+                            <div class="skill__progress">
+                                <div class="skill__progress-inner" style="width: -20%;"></div>
+                            </div>
+                        </div>
+                        <div class="skill">
                             <div class="skill__name">Software Engineering</div>
                             <div class="skill__progress">
                                 <div class="skill__progress-inner" style="width: -20%;"></div>
                             </div>
                         </div>
                         <div class="skill">
-                            <div class="skill__name">Full-Stack Web
-                                Development</div>
+                            <div class="skill__name">Music Composition and Performance</div>
                             <div class="skill__progress">
                                 <div class="skill__progress-inner" style="width: -20%;"></div>
                             </div>
                         </div>
                         <div class="skill">
-                            <div class="skill__name">Object-Oriented
-                                Programming</div>
+                            <div class="skill__name">Public Speaking</div>
                             <div class="skill__progress">
                                 <div class="skill__progress-inner" style="width: -20%;"></div>
                             </div>
                         </div>
                         <div class="skill">
-                            <div class="skill__name">Data Structures and
-                                Algorithms</div>
+                            <div class="skill__name">Writing</div>
                             <div class="skill__progress">
                                 <div class="skill__progress-inner" style="width: -20%;"></div>
                             </div>
                         </div>
-                        <div class="skill">
-                            <div class="skill__name">Education</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="section section--sidebar">
-                    <div class="section__header">
-                        <div class="section__header">
-                            <span>H</span>
-                            <span>O</span>
-                            <span>B</span>
-                            <span>B</span>
-                            <span>I</span>
-                            <span>E</span>
-                            <span>S</span>
-                        </div>
-                    </div>
-                    <div class="section__content">
-                        <div class="hobbies">Reading, Martial Arts , Music Performance and Composition</div>
                     </div>
                 </div>
             </div>
