--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Crown Jewell Automations</title>
 	<style>
 		html {
 			font-size: 16px;
@@ -38,13 +38,13 @@
 
 		<li>Design, Discovery, Documentation.</li>
 
-		<li>Debugging and Updating of Existing Software Systems..</li>
+		<li>Debugging and Updating of Existing Software Systems.</li>
 
 		<li>Mediation and Conflict Resolution.</li>
 
 		<li>Education and Training.</li>
 
-		<li>East-West Collaboration (东西合作.).</li>
+		<li>Text Translation (Mandarin Chinese [Simplified Script] to English)</li>
 
 
 	</ol>
@@ -58,8 +58,7 @@
 			tens of thousands to millions</li> of dollars.
 
 		<li>...participated in <strong>rigorous and demanding</strong> ventures in the education
-			sector that had measurable
-			student outcomes.</li>
+			sector with student outcomes that made national news.</li>
 
 		<li>...launched a <strong>new crypto-currency</strong> that
 			is in circulation and traded
