--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		We automate information-intensive processing.
 
 	<ol>Services:
-		<li>Software development.</li>
+		<li>Software Development.</li>
 
 		<li>Design, Discovery, Documentation.</li>
 
