--- a/index.html
+++ b/index.html
@@ -33,21 +33,6 @@
 		<br>
 		We automate information-intensive processing.
 
-	<ol>Services:
-		<li>Software Development.</li>
-
-		<li>Design, Discovery, Documentation.</li>
-
-		<li>Debugging and Updating of Existing Software Systems.</li>
-
-		<li>Mediation and Conflict Resolution.</li>
-
-		<li>Education and Training.</li>
-
-		<li>Text Translation (Mandarin Chinese [Simplified Script] to English)</li>
-
-
-	</ol>
 	<ul>Recently, Crown Jewell Automations has...
 		<li>...overseen the design and development of <strong>over 100 web
 				applications</strong>, from conception to MVP
@@ -61,9 +46,20 @@
 			sector with student outcomes that made national news.</li>
 
 		<li>...launched a <strong>new crypto-currency</strong> that
-			is in circulation and traded
+			is in circulation 
 			right now.</li>
 	</ul>
+		<ol>Services:
+		<li>Software Development.</li>
+
+		<li>Debugging and Updating of Existing Software Systems.</li>
+
+		<li>Education and Training.</li>
+
+		<li>Text Translation (Mandarin Chinese [Simplified Script] to English)</li>
+
+
+	</ol>
 	</p>
 </body>
 
